--- a/prwebsite/static/lion/css/info.css
+++ b/prwebsite/static/lion/css/info.css
@@ -110,6 +110,8 @@
 
 .schedule_container::-webkit-scrollbar-thumb {
     background-color: #FF9E1B;
+    border-top: 4vw solid black;
+    border-bottom: 4vw solid black;
 }
 
 .video {
