programmers_title_modify

--- a/prwebsite/static/lion/css/madein.css
+++ b/prwebsite/static/lion/css/madein.css
@@ -58,3 +58,7 @@
 a:link { color: white; text-decoration: none;}
 a:visited { color: white; text-decoration: none;}
 a:hover { color: white; text-decoration: none;}
+
+.programmers_title{
+    text-align: center;
+}
