--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -191,6 +191,7 @@
             <button class="google_form"><a href="#">바로 참여하러 가기 →</a></button>
         </div>
 
+        <h5 class="programmers_title">programmers</h5>
         <div class="line_total_cover">
             <div class = "line">
                 <div class="madein">
