--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -228,12 +228,12 @@
                 </div>
                 <div class="madein">
                     <div class="programmers">
-                        <div class="hidden_madein_box">주영빈</div>
+                        <div class="hidden_madein_box">조세은</div>
                     </div>  
                 </div>
                 <div class="madein">
                     <div class="programmers">
-                        <div class="hidden_madein_box">조세은</div>
+                        <div class="hidden_madein_box">주영빈</div>
                     </div>  
                 </div>
             </div>
@@ -250,6 +250,6 @@
         <p class = "insta"><span class = "orange">INSTAGRAM</span> @likelion_skhu</p>
         <br>
     </footer>
-</body>
+H</body>
 
 </html>
