--- a/prwebsite/static/lion/css/madein.css
+++ b/prwebsite/static/lion/css/madein.css
@@ -25,17 +25,17 @@
     background-image: url("/static/lion/img/sina/은혜.jpeg");
 }
 .line:last-child .madein:nth-child(3) .programmers:first-child{
-    background-image: url("/static/lion/img/sina/주영빈.jpeg");
+    background-image: url("/static/lion/img/sina/세은.jpeg");
 }
 .line:last-child .madein:last-child .programmers:first-child{
-    background-image: url("/static/lion/img/sina/세은.jpeg");
+    background-image: url("/static/lion/img/sina/주영빈.jpeg");
 } 
 
 .programmers:hover .hidden_madein_box{
     top : 0;
-    
 }
 .hidden_madein_box{
+    /* 마우스 올렸을 때 */
     top : 150px;
     background-color : rgba(255,165,0,0.5);
     position : absolute;
