fix the event page

--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -250,6 +250,6 @@
         <p class = "insta"><span class = "orange">INSTAGRAM</span> @likelion_skhu</p>
         <br>
     </footer>
-H</body>
+</body>
 
 </html>
