--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -20,28 +20,47 @@
 
 <body>
     <header>
-        <p class = "header_text">Like lion</p>
+        <p class="header_text">Like lion</p>
     </header>
 
     <div id='wrapper'>
         <div class="leo">
             <div class="leo_top">
-                <br><p id="leo_title">별을 클릭해 보세요</p>
+                <br>
+                <p id="leo_title">별을 클릭해 보세요</p>
                 <hr><img id="leo_search" src="static/lion/img/leo/검색.png" alt="검색">
             </div>
             <br><br>
             <div class="leo_bottom">
                 <img id="leo_lion" src="static/lion/img/leo/leo.png" alt="사자별자리">
                 <div class="leo_star">
-                    <img id="leo_video" src="static/lion/img/leo/반짝이1.png" onclick="changeVI(), out(leo_video), over(leo_lion), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)" alt="별"></a>
-                    <img id="leo_introduce" src="static/lion/img/leo/반짝이2.png" onclick="changeIN(), out(leo_introduce), over(leo_lion), over(leo_video), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)" alt="별">
-                    <img id="leo_recruit" src="static/lion/img/leo/반짝이3.png" onclick="changeRE(), out(leo_recruit), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)" alt="별">
-                    <img id="leo_schedule" src="static/lion/img/leo/반짝이4.png" onclick="changeSC(), out(leo_schedule), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)" alt="별">
-                    <img id="leo_rulecurri" src="static/lion/img/leo/반짝이5.png" onclick="changeMU(), out(leo_rulecurri), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)" alt="별">
-                    <img id="leo_slide" src="static/lion/img/leo/반짝이6.png" onclick="changeSL(), out(leo_slide), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_event), over(leo_madein), over(leo_footer)" alt="별">
-                    <img id="leo_event" src="static/lion/img/leo/반짝이7.png" onclick="changeEV(), out(leo_event), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_madein), over(leo_footer)" alt="별">
-                    <img id="leo_madein" src="static/lion/img/leo/반짝이8.png" onclick="changeMA(), out(leo_madein), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_footer)" alt="별">
-                    <img id="leo_footer" src="static/lion/img/leo/반짝이9.png" onclick="changeFO(), out(leo_footer), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein)" alt="별">
+                    <img id="leo_video" src="static/lion/img/leo/반짝이1.png"
+                        onclick="changeVI(), out(leo_video), over(leo_lion), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)"
+                        alt="별"></a>
+                    <img id="leo_introduce" src="static/lion/img/leo/반짝이2.png"
+                        onclick="changeIN(), out(leo_introduce), over(leo_lion), over(leo_video), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)"
+                        alt="별">
+                    <img id="leo_recruit" src="static/lion/img/leo/반짝이3.png"
+                        onclick="changeRE(), out(leo_recruit), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)"
+                        alt="별">
+                    <img id="leo_schedule" src="static/lion/img/leo/반짝이4.png"
+                        onclick="changeSC(), out(leo_schedule), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)"
+                        alt="별">
+                    <img id="leo_rulecurri" src="static/lion/img/leo/반짝이5.png"
+                        onclick="changeMU(), out(leo_rulecurri), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_slide), over(leo_event), over(leo_madein), over(leo_footer)"
+                        alt="별">
+                    <img id="leo_slide" src="static/lion/img/leo/반짝이6.png"
+                        onclick="changeSL(), out(leo_slide), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_event), over(leo_madein), over(leo_footer)"
+                        alt="별">
+                    <img id="leo_event" src="static/lion/img/leo/반짝이7.png"
+                        onclick="changeEV(), out(leo_event), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_madein), over(leo_footer)"
+                        alt="별">
+                    <img id="leo_madein" src="static/lion/img/leo/반짝이8.png"
+                        onclick="changeMA(), out(leo_madein), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_footer)"
+                        alt="별">
+                    <img id="leo_footer" src="static/lion/img/leo/반짝이9.png"
+                        onclick="changeFO(), out(leo_footer), over(leo_lion), over(leo_video), over(leo_introduce), over(leo_recruit), over(leo_schedule), over(leo_rulecurri), over(leo_slide), over(leo_event), over(leo_madein)"
+                        alt="별">
                 </div>
             </div>
             <script src="{% static 'lion/js/leo.js' %}"></script>
@@ -55,77 +74,76 @@
                     <div class="intro_container">
                         <p class="title">🦁"멋쟁이 사자처럼"이 무엇인가요?</p>
                         <p>
-                            "<span class = "orange">HACK YOUR LIFE</span> 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 시작된 <br>
+                            "<span class="orange">HACK YOUR LIFE</span> 내 아이디어를 내 손으로 실현한다"<br>
                             전국 연합 동아리 멋쟁이 사자처럼. <br>
                             <br>
-                            자신이 생각했던 아이디어를 구체화하고 프로그래밍 교육을 통해 <br>
-                            웹서비스 구현을 목표로 활동하는 전국 연합동아리입니다. <br>
-                            프로그래밍에 대해 전혀 모르는 비전공자도, 신입생도 환영합니다. <br>
+                            자신이 생각했던 아이디어를 구체화하고
+                            프로그래밍 교육을 통해 <br>
+                            웹서비스 구현을 목표로 활동하는 동아리입니다. <br>
+                            프로그래밍에 대해 전혀 모르는<br>비전공자분들과 신입생분들 모두 환영합니다! <br>
                             <br>
                             우리 멋쟁이 사자처럼 성공회대학교는 <br>
-                            2022년을 함께 나아갈 아기사자를 찾고 있습니다. <br>
-                            멋쟁이 사자처럼에서 함께 성장할 아기사자를 모집합니다 !
+                            2022년을 함께 나아갈 아기사자를 찾고 있습니다 !
                         </p>
                     </div>
                 </div>
                 <img id="info_star" src="{% static 'lion/img/info/star.png' %}" alt="별">
-                </div>
             </div>
+        </div>
 
-            <div class="recruit" id="leo_RE">
-                <div class="recruit_box">
-                    <div class="recruit_container">
-                        <p class="title">모집대상</p>
-                        <p>
-                            ☝🏻 전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
-                            ✌🏻 해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
-                            👌🏻 Django와 Python을 통한 웹 서비스를 구축해보고 싶은 누구나! <br>
-                            <br><br>
-                            멋쟁이 사자처럼 성공회대학교가 기다리고 있습니다 🦁
-                        </p>
-                    </div>
-                    <img id="skhu2" src="{% static 'lion/img/info/skhu2.jpeg' %}" alt="멋사 성공회대 사진 2">
+        <div class="recruit" id="leo_RE">
+            <div class="recruit_box">
+                <div class="recruit_container">
+                    <p class="title">모집대상</p>
+                    <p>
+                        ☝🏻 전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
+                        ✌🏻 해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
+                        👌🏻 Django와 Python을 통한 웹 서비스를 구축해보고 싶은 누구나! <br>
+                        <br><br>
+                        멋쟁이 사자처럼 성공회대학교가 기다리고 있습니다 🦁
+                    </p>
                 </div>
+                <img id="skhu2" src="{% static 'lion/img/info/skhu2.jpeg' %}" alt="멋사 성공회대 사진 2">
             </div>
+        </div>
 
-            <div class="schedule" id="leo_SC">
-                <p class="title">모집일정</p>
+        <div class="schedule" id="leo_SC">
+            <p class="title">모집일정</p>
+            <p>
+                구글폼을 이용한 1차 면접과 비대면(ex. 줌)을 통한 2차 면접을 진행합니다.
+            </p>
+            <div class="schedule_container">
+                2월 21일 - 3월 8일 : 구글폼을 이용한 서류 모집 기간 <br><br>
+                3월 10일 : 서류 합격 통보 <br><br>
+                3월 14일 - 3월 16일 : 비대면 프로그램을 이용한 2차 면접 <br><br>
+                3월 18일 : 멋쟁이 사자처럼 성공회대 최종 선별 <br><br>
+                3월 22일 : 멋쟁이 사자처럼 성공회대 OT <br><br>
+                3월 26일 : 멋쟁이 사자처럼 중앙 OT
+            </div>
+        </div>
+
+        <div class="video">
+            <video src="{% static 'lion/video/info/likelion_skhu.mp4' %}" controls>
+            </video>
+        </div>
+
+        <div class="must" id="leo_MU">
+            <div class="rule">
+                <p class="title">멋쟁이 사자처럼 규칙</p>
                 <p>
-                    구글폼을 이용한 1차 면접과 비대면(ex. 줌)을 통한 2차 면접을 진행합니다.
+                    멋쟁이 사자처럼 10기로 함께 활동하고 싶다면 <br>
+                    아래 규칙을 정독한 후에 지원서를 작성해주시길 바랍니다 ! <br>
                 </p>
-                <div class="schedule_container">
-                    2월 21일 - 3월 8일 : 구글폼을 이용한 서류 모집 기간 <br><br> 
-                    3월 10일 : 서류 합격 통보 <br><br>
-                    3월 14일 - 3월 16일 : 비대면 프로그램을 이용한 2차 면접 <br><br>
-                    3월 18일 : 멋쟁이 사자처럼 성공회대 최종 선별 <br><br>
-                    3월 22일 : 멋쟁이 사자처럼 성공회대 OT <br><br>
-                    3월 26일 : 멋쟁이 사자처럼 중앙 OT 
-                </div>
-            </div>
-                
-            <div class="video">
-                <video src="{% static 'lion/video/info/likelion_skhu.mp4' %}" controls>
-                </video>
+                <a class="link" href="{% static 'lion/img/info/likelion_rule.pdf' %}" download> 멋쟁이 사자처럼 규칙 </a>
             </div>
 
-            <div class="must" id="leo_MU">                
-                <div class="rule">
-                    <p class="title">멋쟁이 사자처럼 규칙</p>
-                    <p>
-                        멋쟁이 사자처럼 10기로 함께 활동하고 싶다면 <br>
-                        아래 규칙을 정독한 후에 지원서를 작성해주시길 바랍니다 ! <br>
-                    </p>
-                    <a class="link" href="{% static 'lion/img/info/likelion_rule.pdf' %}" download> 멋쟁이 사자처럼 규칙 </a>
-                </div>
-
-                <div class="curriculum">
-                    <p class="title">멋쟁이 사자처럼 커리큘럼</p>
-                    <p>
-                        멋쟁이 사자처럼 10기는 <br>
-                        기본적인 개발 언어 교육과 선호 트랙에 따른 심화 교육을 진행합니다 ! <br>
-                    </p>
-                    <a class="link" href="{% static 'lion/img/info/likelion_curriculum.pdf' %}" download> 멋쟁이 사자처럼 커리큘럼 </a>
-                </div>
+            <div class="curriculum">
+                <p class="title">멋쟁이 사자처럼 커리큘럼</p>
+                <p>
+                    멋쟁이 사자처럼 10기는 <br>
+                    기본적인 개발 언어 교육과 선호 트랙에 따른 심화 교육을 진행합니다 ! <br>
+                </p>
+                <a class="link" href="{% static 'lion/img/info/likelion_curriculum.pdf' %}" download> 멋쟁이 사자처럼 커리큘럼 </a>
             </div>
         </div>
 
@@ -133,34 +151,35 @@
             <span>이미지를 클릭하면 해당 서비스 페이지로 이동합니다.</span>
             <div class="slide-container">
                 <ul class="slides-box">
-                    
+
                     <li class="slide-li">
-                        <img class="slide-img" src="{% static 'lion/img/banner1.png' %}"></li>
+                        <img class="slide-img" src="{% static 'lion/img/banner1.png' %}">
+                    </li>
                     <li class="slide-li">
                         <a href="https://sharebookrest.herokuapp.com/">
                             <img class="slide-img" src="{% static 'lion/img/banner2_bookrest.png' %}"></a>
-                        </li>
+                    </li>
                     <li class="slide-li">
                         <a href="https://likelionatskhu9jamjam.herokuapp.com/">
                             <img class="slide-img" src="{% static 'lion/img/banner3_jamjam.png' %}"></a>
-                        </li>
+                    </li>
                     <li class="slide-li">
                         <a href="https://pore-likelion.herokuapp.com/">
                             <img class="slide-img" src="{% static 'lion/img/banner4_pore.png' %}"></a>
-                        </li>
+                    </li>
                     <li class="slide-li">
                         <a href="https://mucksal-project.herokuapp.com/">
                             <img class="slide-img" src="{% static 'lion/img/banner5_mucksal.png' %}"></a>
-                        </li>
+                    </li>
                     <li class="slide-li">
                         <a href="https://gigoogigeulz9z9.herokuapp.com/">
                             <img class="slide-img" src="{% static 'lion/img/banner6_earth.png '%}"></a>
-                        </li>
+                    </li>
                 </ul>
-                
-                <p class="controller"> 
-                    <span class="prev">&lang;</span> 
-                    <span class="next">&rang;</span> 
+
+                <p class="controller">
+                    <span class="prev">&lang;</span>
+                    <span class="next">&rang;</span>
                 </p>
 
             </div>
@@ -170,7 +189,7 @@
         <div class="event">
             <div class="event_text">
                 <p class="event_title">🦁 멋사 이벤트 🦁</p>
-                <div class= "event_text_quiz">
+                <div class="event_text_quiz">
                     <p>
                         아무나 상관없이! 간단한 퀴즈를 풀고 상품 받아가자!
                     </p>
@@ -178,13 +197,13 @@
                         이 문제들은 페이지를 자세히 살펴보면 풀 수 있는 간단한 문제들이니 한번 참여해보세요!
                     </p>
                     <p class="padding">
-                        <span>1️⃣</span>  멋쟁이 사자처럼 운영진 수는 몇 명일까요?
+                        <span>1️⃣</span> 멋쟁이 사자처럼 운영진 수는 몇 명일까요?
                     </p>
                     <p class="padding">
-                        <span>2️⃣</span>  "멋쟁이 사자처럼"의 활동 시간이 아닌 것은?
+                        <span>2️⃣</span> "멋쟁이 사자처럼"의 활동 시간이 아닌 것은?
                     </p>
                     <p class="padding">
-                        <span>3️⃣</span>  멋쟁이 사자처럼에서 배우는 것이 아닌 것은?
+                        <span>3️⃣</span> 멋쟁이 사자처럼에서 배우는 것이 아닌 것은?
                     </p>
                 </div>
             </div>
@@ -193,61 +212,60 @@
 
         <h5 class="programmers_title">programmers</h5>
         <div class="line_total_cover">
-            <div class = "line">
+            <div class="line">
                 <div class="madein">
                     <div class="programmers">
                         <div class="hidden_madein_box">강규빈</div>
-                    </div>  
+                    </div>
                 </div>
                 <div class="madein">
                     <div class="programmers">
                         <div class="hidden_madein_box">강민정</div>
-                    </div>  
+                    </div>
                 </div>
                 <div class="madein">
                     <div class="programmers">
                         <div class="hidden_madein_box">김수진</div>
-                    </div>  
+                    </div>
                 </div>
                 <div class="madein">
                     <div class="programmers">
                         <div class="hidden_madein_box">김신아</div>
-                    </div>  
+                    </div>
                 </div>
             </div>
             <div class="line">
                 <div class="madein">
                     <div class="programmers">
                         <div class="hidden_madein_box">김예지</div>
-                    </div>  
+                    </div>
                 </div>
                 <div class="madein">
                     <div class="programmers">
                         <div class="hidden_madein_box">김은혜</div>
-                    </div>  
+                    </div>
                 </div>
                 <div class="madein">
                     <div class="programmers">
                         <div class="hidden_madein_box">조세은</div>
-                    </div>  
+                    </div>
                 </div>
                 <div class="madein">
                     <div class="programmers">
                         <div class="hidden_madein_box">주영빈</div>
-                    </div>  
+                    </div>
                 </div>
             </div>
-        </div>   
+        </div>
     </div>
-</div>
 
     <footer>
         <img class="footer_img" src="{% static 'lion/img/5_footer.png' %}">
         <br>
         <span class="H_orange">HACK YOUR LIFE</span>
         <p class="footlion">멋쟁이 사자처럼</p>
-        <p class = "number"><span class = "orange">PHONE NUMBER</span> 010-4122-2746</p>
-        <p class = "insta"><span class = "orange">INSTAGRAM</span> @likelion_skhu</p>
+        <p class="number"><span class="orange">PHONE NUMBER</span> 010-4122-2746</p>
+        <p class="insta"><span class="orange">INSTAGRAM</span> @likelion_skhu</p>
         <br>
     </footer>
 </body>
