검색창 수정

--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -122,7 +122,7 @@
             </div>
         </div>
 
-        <div class="video">
+        <div class="video" id="leo_VI">
             <video src="{% static 'lion/video/info/likelion_skhu.mp4' %}" controls>
             </video>
         </div>
@@ -147,7 +147,7 @@
             </div>
         </div>
 
-        <div class="slide">
+        <div class="slide" id="leo_SL">
             <span>이미지를 클릭하면 해당 서비스 페이지로 이동합니다.</span>
             <div class="slide-container">
                 <ul class="slides-box">
@@ -210,7 +210,7 @@
             <button class="google_form"><a href="#">바로 참여하러 가기 →</a></button>
         </div>
 
-        <h5 class="programmers_title">programmers</h5>
+        <h5 class="programmers_title" id="leo_MA">programmers</h5>
         <div class="line_total_cover">
             <div class="line">
                 <div class="madein">
@@ -259,7 +259,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer id="leo_FO">
         <img class="footer_img" src="{% static 'lion/img/5_footer.png' %}">
         <br>
         <span class="H_orange">HACK YOUR LIFE</span>
