--- a/prwebsite/static/lion/css/leo.css
+++ b/prwebsite/static/lion/css/leo.css
@@ -48,13 +48,13 @@
 #leo_video {
     position: absolute;
     top: 10%;
-    right: 16%;
+    right: 15%;
 }
 
 #leo_introduce {
     position: absolute;
     top: 2.7%;
-    right: 21.8%;
+    right: 22%;
 }
 
 #leo_recruit {
@@ -84,13 +84,13 @@
 #leo_event {
     position: absolute;
     top: 43.5%;
-    left: 34.9%;
+    left: 34.5%;
 }
 
 #leo_madein {
     position: absolute;
     top: 56.7%;
-    right: 25.3%;
+    right: 25%;
 }
 
 #leo_footer {
@@ -182,11 +182,11 @@
   }
   
 #leo_one::before {
-    content: "소개영상";
+    content: "소개영상 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 17%;
+    padding-top: 11%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
@@ -220,11 +220,11 @@
   }
   
 #leo_two::before {
-    content: "멋사소개";
+    content: "멋사소개 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 17%;
+    padding-top: 11%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
@@ -244,11 +244,11 @@
   }
   
 #leo_three::before {
-    content: "모집대상";
+    content: "모집대상 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 17%;
+    padding-top: 11%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
@@ -268,11 +268,11 @@
   }
   
 #leo_four::before {
-    content: "모집일정";
+    content: "모집일정 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 17%;
+    padding-top: 11%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
@@ -292,11 +292,11 @@
   }
   
 #leo_five::before {
-    content: "규칙 & 커리큘럼";
+    content: "규칙 & 커리큘럼 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
+    padding-top: 7%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
@@ -316,11 +316,11 @@
   }
   
 #leo_six::before {
-    content: "지난해 프로젝트";
+    content: "지난해 프로젝트 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
+    padding-top: 7%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
@@ -341,11 +341,11 @@
   }
   
 #leo_seven::before {
-    content: "이벤트 참여";
+    content: "이벤트 참여 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 14%;
+    padding-top: 9%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
@@ -365,11 +365,11 @@
   }
   
 #leo_eight::before {
-    content: "운영진들";
+    content: "운영진들 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 17%;
+    padding-top: 11%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
@@ -389,11 +389,11 @@
   }
   
 #leo_nine::before {
-    content: "멋사 정보";
+    content: "멋사정보 이동";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 17%;
+    padding-top: 11%;
     bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
