id값 모두 부여

--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -186,7 +186,7 @@
             <script src="{% static 'lion/js/slide.js' %}"></script>
         </div>
 
-        <div class="event">
+        <div class="event" id="leo_EV">
             <div class="event_text">
                 <p class="event_title">🦁 멋사 이벤트 🦁</p>
                 <div class="event_text_quiz">
