--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -27,7 +27,7 @@
         <div class="leo">
             <div class="leo_top">
                 <br>
-                <p id="leo_title">별을 클릭해 보세요</p>
+                <p id="leo_title" onclick="changeTI(), out(leo_lion), out(leo_video), out(leo_introduce), out(leo_recruit), out(leo_schedule), out(leo_rulecurri), out(leo_slide), out(leo_event), out(leo_madein), out(leo_footer)">별을 클릭해 보세요</p>
                 <hr><img id="leo_search" src="static/lion/img/leo/검색.png" alt="검색">
             </div>
             <br><br>
