--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -5,6 +5,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/x-icon" href="static/lion/img/logo.ico" />
+    <link rel="icon" href="static/lion/img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'lion/css/leo.css' %}">
     <link rel="stylesheet" href="{% static 'lion/css/event.css' %}">
     <link rel="stylesheet" href="{% static 'lion/css/madein.css' %}">
@@ -14,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+
 
     <title>LIKELION at SKHU</title>
 </head>
