--- a/prwebsite/static/lion/css/madein.css
+++ b/prwebsite/static/lion/css/madein.css
@@ -55,7 +55,7 @@
 .line_total_cover{
     margin-bottom: 100px;
 }
-a:link { color: white; text-decoration: none;}
+a:link { text-decoration: none;}
 a:visited { color: white; text-decoration: none;}
 a:hover { color: white; text-decoration: none;}
 
