--- a/prwebsite/static/lion/css/event.css
+++ b/prwebsite/static/lion/css/event.css
@@ -1,5 +1,5 @@
 .event{
-    margin : 10vw 5vw 10vw 5vw;
+    margin : 15vw 0 15vw 0;
 }
 .event_title{
     font-size : 2vw;
@@ -14,6 +14,9 @@
 .event_text_quiz span{
     font-size : 1.9vw;
 }
+.event_explain{
+    margin: 0.7vw 0 2.3vw 0;
+}
 .google_form{
     background-color: black;
     border : 0px;
@@ -24,7 +27,4 @@
 }
 .google_form a:hover{
     color: #FF9E1B;
-}
-.padding {
-    padding : 10px 0;
 }
