--- a/prwebsite/static/lion/css/madein.css
+++ b/prwebsite/static/lion/css/madein.css
@@ -53,7 +53,7 @@
 
 
 .line_total_cover{
-    margin-bottom: 100px;
+    margin: 1vw 0 15vw 0;
 }
 a:link { text-decoration: none;}
 a:visited { color: white; text-decoration: none;}
@@ -61,4 +61,5 @@ a:hover { color: white; text-decoration: none;}
 
 .programmers_title{
     text-align: center;
+    width: 100%;
 }
